@@ -1,0 +1,1 @@
+declare main as virtual member function returning short int
