@@ -1,0 +1,1 @@
+cdecl @ @ -xc++ @ explain virtual short main() @ 0
